deploy/generated/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: podtato-head-abcxzy
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: podtato-head
    app.kubernetes.io/part-of: podtato-head
    app.kubernetes.io/version: 0.3.1
  name: podtato-head-frontend
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: podtato-head-frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: podtato-head-abcxzy
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: podtato-head
    app.kubernetes.io/part-of: podtato-head
    app.kubernetes.io/version: 0.3.1
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: hat
    app.kubernetes.io/instance: podtato-head-abcxzy
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: podtato-head
    app.kubernetes.io/part-of: podtato-head
    app.kubernetes.io/version: 0.3.1
  name: podtato-head-hat
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: podtato-head-hat
    app.kubernetes.io/component: hat
    app.kubernetes.io/instance: podtato-head-abcxzy
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: podtato-head
    app.kubernetes.io/part-of: podtato-head
    app.kubernetes.io/version: 0.3.1
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: left-arm
    app.kubernetes.io/instance: podtato-head-abcxzy
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: podtato-head
    app.kubernetes.io/part-of: podtato-head
    app.kubernetes.io/version: 0.3.1
  name: podtato-head-left-arm
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: podtato-head-left-arm
    app.kubernetes.io/component: left-arm
    app.kubernetes.io/instance: podtato-head-abcxzy
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: podtato-head
    app.kubernetes.io/part-of: podtato-head
    app.kubernetes.io/version: 0.3.1
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: left-leg
    app.kubernetes.io/instance: podtato-head-abcxzy
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: podtato-head
    app.kubernetes.io/part-of: podtato-head
    app.kubernetes.io/version: 0.3.1
  name: podtato-head-left-leg
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: podtato-head-left-leg
    app.kubernetes.io/component: left-leg
    app.kubernetes.io/instance: podtato-head-abcxzy
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: podtato-head
    app.kubernetes.io/part-of: podtato-head
    app.kubernetes.io/version: 0.3.1
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: right-arm
    app.kubernetes.io/instance: podtato-head-abcxzy
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: podtato-head
    app.kubernetes.io/part-of: podtato-head
    app.kubernetes.io/version: 0.3.1
  name: podtato-head-right-arm
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: podtato-head-right-arm
    app.kubernetes.io/component: right-arm
    app.kubernetes.io/instance: podtato-head-abcxzy
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: podtato-head
    app.kubernetes.io/part-of: podtato-head
    app.kubernetes.io/version: 0.3.1
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: right-leg
    app.kubernetes.io/instance: podtato-head-abcxzy
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: podtato-head
    app.kubernetes.io/part-of: podtato-head
    app.kubernetes.io/version: 0.3.1
  name: podtato-head-right-leg
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: podtato-head-right-leg
    app.kubernetes.io/component: right-leg
    app.kubernetes.io/instance: podtato-head-abcxzy
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: podtato-head
    app.kubernetes.io/part-of: podtato-head
    app.kubernetes.io/version: 0.3.1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: podtato-head-frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: podtato-head-abcxzy
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: podtato-head
    app.kubernetes.io/part-of: podtato-head
    app.kubernetes.io/version: 0.3.1
  name: podtato-head-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podtato-head-frontend
      app.kubernetes.io/component: frontend
      app.kubernetes.io/instance: podtato-head-abcxzy
      app.kubernetes.io/managed-by: kustomize
      app.kubernetes.io/name: podtato-head
      app.kubernetes.io/part-of: podtato-head
      app.kubernetes.io/version: 0.3.1
  template:
    metadata:
      labels:
        app: podtato-head-frontend
        app.kubernetes.io/component: frontend
        app.kubernetes.io/instance: podtato-head-abcxzy
        app.kubernetes.io/managed-by: kustomize
        app.kubernetes.io/name: podtato-head
        app.kubernetes.io/part-of: podtato-head
        app.kubernetes.io/version: 0.3.1
        role: frontend
    spec:
      containers:
      - env:
        - name: PODTATO_COMPONENT
          value: frontend
        - name: SERVICES_CONFIG_FILE_PATH
          value: /config/servicesConfig.yaml
        image: ghcr.io/podtato-head/podtato-server:v0.3.1
        name: podtato-head-frontend
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /config/servicesConfig.yaml
          name: services-config
          readOnly: true
          subPath: servicesConfig.yaml
      volumes:
      - configMap:
          items:
          - key: servicesConfig.yaml
            path: servicesConfig.yaml
          name: services-config
        name: services-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: podtato-head-hat
    app.kubernetes.io/component: hat
    app.kubernetes.io/instance: podtato-head-abcxzy
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: podtato-head
    app.kubernetes.io/part-of: podtato-head
    app.kubernetes.io/version: 0.3.1
  name: podtato-head-hat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podtato-head-hat
      app.kubernetes.io/component: hat
      app.kubernetes.io/instance: podtato-head-abcxzy
      app.kubernetes.io/managed-by: kustomize
      app.kubernetes.io/name: podtato-head
      app.kubernetes.io/part-of: podtato-head
      app.kubernetes.io/version: 0.3.1
  template:
    metadata:
      labels:
        app: podtato-head-hat
        app.kubernetes.io/component: hat
        app.kubernetes.io/instance: podtato-head-abcxzy
        app.kubernetes.io/managed-by: kustomize
        app.kubernetes.io/name: podtato-head
        app.kubernetes.io/part-of: podtato-head
        app.kubernetes.io/version: 0.3.1
        role: backend
    spec:
      containers:
      - env:
        - name: PODTATO_COMPONENT
          value: hat
        image: ghcr.io/podtato-head/podtato-server:v0.3.1
        name: container
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: podtato-head-left-arm
    app.kubernetes.io/component: left-arm
    app.kubernetes.io/instance: podtato-head-abcxzy
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: podtato-head
    app.kubernetes.io/part-of: podtato-head
    app.kubernetes.io/version: 0.3.1
  name: podtato-head-left-arm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podtato-head-left-arm
      app.kubernetes.io/component: left-arm
      app.kubernetes.io/instance: podtato-head-abcxzy
      app.kubernetes.io/managed-by: kustomize
      app.kubernetes.io/name: podtato-head
      app.kubernetes.io/part-of: podtato-head
      app.kubernetes.io/version: 0.3.1
  template:
    metadata:
      labels:
        app: podtato-head-left-arm
        app.kubernetes.io/component: left-arm
        app.kubernetes.io/instance: podtato-head-abcxzy
        app.kubernetes.io/managed-by: kustomize
        app.kubernetes.io/name: podtato-head
        app.kubernetes.io/part-of: podtato-head
        app.kubernetes.io/version: 0.3.1
        role: backend
    spec:
      containers:
      - env:
        - name: PODTATO_COMPONENT
          value: left-arm
        image: ghcr.io/podtato-head/podtato-server:v0.3.1
        name: container
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: podtato-head-left-leg
    app.kubernetes.io/component: left-leg
    app.kubernetes.io/instance: podtato-head-abcxzy
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: podtato-head
    app.kubernetes.io/part-of: podtato-head
    app.kubernetes.io/version: 0.3.1
  name: podtato-head-left-leg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podtato-head-left-leg
      app.kubernetes.io/component: left-leg
      app.kubernetes.io/instance: podtato-head-abcxzy
      app.kubernetes.io/managed-by: kustomize
      app.kubernetes.io/name: podtato-head
      app.kubernetes.io/part-of: podtato-head
      app.kubernetes.io/version: 0.3.1
  template:
    metadata:
      labels:
        app: podtato-head-left-leg
        app.kubernetes.io/component: left-leg
        app.kubernetes.io/instance: podtato-head-abcxzy
        app.kubernetes.io/managed-by: kustomize
        app.kubernetes.io/name: podtato-head
        app.kubernetes.io/part-of: podtato-head
        app.kubernetes.io/version: 0.3.1
        role: backend
    spec:
      containers:
      - env:
        - name: PODTATO_COMPONENT
          value: left-leg
        image: ghcr.io/podtato-head/podtato-server:v0.3.1
        name: container
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: podtato-head-right-arm
    app.kubernetes.io/component: right-arm
    app.kubernetes.io/instance: podtato-head-abcxzy
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: podtato-head
    app.kubernetes.io/part-of: podtato-head
    app.kubernetes.io/version: 0.3.1
  name: podtato-head-right-arm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podtato-head-right-arm
      app.kubernetes.io/component: right-arm
      app.kubernetes.io/instance: podtato-head-abcxzy
      app.kubernetes.io/managed-by: kustomize
      app.kubernetes.io/name: podtato-head
      app.kubernetes.io/part-of: podtato-head
      app.kubernetes.io/version: 0.3.1
  template:
    metadata:
      labels:
        app: podtato-head-right-arm
        app.kubernetes.io/component: right-arm
        app.kubernetes.io/instance: podtato-head-abcxzy
        app.kubernetes.io/managed-by: kustomize
        app.kubernetes.io/name: podtato-head
        app.kubernetes.io/part-of: podtato-head
        app.kubernetes.io/version: 0.3.1
        role: backend
    spec:
      containers:
      - env:
        - name: PODTATO_COMPONENT
          value: right-arm
        image: ghcr.io/podtato-head/podtato-server:v0.3.1
        name: container
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: podtato-head-right-leg
    app.kubernetes.io/component: right-leg
    app.kubernetes.io/instance: podtato-head-abcxzy
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: podtato-head
    app.kubernetes.io/part-of: podtato-head
    app.kubernetes.io/version: 0.3.1
  name: podtato-head-right-leg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podtato-head-right-leg
      app.kubernetes.io/component: right-leg
      app.kubernetes.io/instance: podtato-head-abcxzy
      app.kubernetes.io/managed-by: kustomize
      app.kubernetes.io/name: podtato-head
      app.kubernetes.io/part-of: podtato-head
      app.kubernetes.io/version: 0.3.1
  template:
    metadata:
      labels:
        app: podtato-head-right-leg
        app.kubernetes.io/component: right-leg
        app.kubernetes.io/instance: podtato-head-abcxzy
        app.kubernetes.io/managed-by: kustomize
        app.kubernetes.io/name: podtato-head
        app.kubernetes.io/part-of: podtato-head
        app.kubernetes.io/version: 0.3.1
        role: backend
    spec:
      containers:
      - env:
        - name: PODTATO_COMPONENT
          value: right-leg
        image: ghcr.io/podtato-head/podtato-server:v0.3.1
        name: container
        ports:
        - containerPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: podtato-head-backend
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: frontend
  podSelector:
    matchLabels:
      role: backend
  policyTypes:
  - Ingress
  - Egress
